--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-08-phonebook",
+  "name": "react-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kenobiwins.github.io/goit-react-hw-08-phonebook/",
+  "homepage": "https://kenobiwins.github.io/react-phonebook/",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
